name:                gblog
version:             0.1.0.0
synopsis:            simple blog generator
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Stasenko-Konstantin
maintainer:          stasenko.ky@gmail.com
-- copyright:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

executable fungsi
  main-is:             Main.hs
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010
